--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </h1>
                     <ul class="download-badges">
                         <!-- <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li> -->
-                        <li><a href="https://bolisettysujith.github.io" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                        <li><a href="https://play.google.com/store/apps/details?id=com.sujith.covi_kill" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
                     </ul>
                     <!-- <div class="buttons" data-aos="fade-up">
                         <a href="#download" class="smoothscroll button stroke">
@@ -245,7 +245,7 @@
 
                 <ul class="download-badges">
                     <!-- <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li> -->
-                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.sujith.covi_kill" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
                 </ul>
 
             </div>
